[package]
name = "staging-node-inspect"
version = "0.12.0"
authors.workspace = true
description = "Substrate node block inspection tool."
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.1" }
thiserror = { workspace = true }
sc-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-client-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-service = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev",  default-features = false }
sp-blockchain = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-io = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-statement-store = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }

[features]
runtime-benchmarks = [
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
