[package]
name = "node-rpc"
version = "3.0.0-dev"
authors.workspace = true
description = "Substrate node rpc methods."
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.22", features = ["server"] }
node-primitives = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
pallet-transaction-payment-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
mmr-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-chain-spec = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-client-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-consensus-babe = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-consensus-babe-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-consensus-beefy = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
# sc-consensus-beefy = { path = "../../client/consensus/beefy" }
# sc-consensus-beefy-rpc = { path = "../../client/consensus/beefy/rpc" }
sc-consensus-beefy-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-consensus-grandpa = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-consensus-grandpa-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-mixnet = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-rpc-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-rpc-spec-v2 = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-sync-state-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-transaction-pool-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-block-builder = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-blockchain = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-consensus-babe = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-keystore = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-statement-store = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
substrate-frame-rpc-system = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
substrate-state-trie-migration-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
