[package]
name = "node-rpc"
version = "3.0.0-dev"
authors.workspace = true
description = "Substrate node rpc methods."
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.22", features = ["server"] }
node-primitives = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-transaction-payment-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
mmr-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
node-template-runtime = { path = "../../runtime" }
sc-chain-spec = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sc-client-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sc-consensus-babe = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
# sc-consensus-babe = { path = "../../client/consensus/babe" }
# sc-consensus-babe-rpc = { path = "../../client/consensus/babe/rpc" }
sc-consensus-babe-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
# sc-consensus-beefy-etf-etf = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-consensus-beefy-etf = { path = "../../primitives/consensus/beefy-etf" }
sc-consensus-beefy-etf = { path = "../../client/consensus/beefy-etf" }
sc-consensus-beefy-etf-rpc = { path = "../../client/consensus/beefy-etf/rpc" }
# sc-consensus-beefy-etf-etf-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sc-consensus-grandpa = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sc-consensus-grandpa-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sc-mixnet = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sc-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sc-rpc-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sc-rpc-spec-v2 = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sc-sync-state-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sc-transaction-pool-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-application-crypto = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-block-builder = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-blockchain = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-consensus-babe = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-keystore = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
# sp-keystore = { path = "../../primitives/keystore" }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-statement-store = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
substrate-frame-rpc-system = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
substrate-state-trie-migration-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
