[package]
name = "node-testing"
version = "3.0.0-dev"
authors.workspace = true
description = "Test utilities for Substrate node."
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
fs_extra = "1"
futures = "0.3.21"
log = { workspace = true, default-features = true }
tempfile = "3.1.0"
frame-system = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
node-cli = { package = "node", path = "../." }
node-primitives = { path = "../primitives" } 
kitchensink-runtime = { path = "../../runtime" }
pallet-asset-conversion = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
pallet-assets = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
pallet-asset-conversion-tx-payment = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
pallet-asset-tx-payment = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
pallet-skip-feeless-payment = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-block-builder = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-client-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-client-db = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev", features = ["rocksdb"] }
sc-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-executor = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sc-service = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev", features = ["rocksdb", "test-helpers"] }
sp-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-block-builder = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-blockchain = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-crypto-hashing = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-inherents = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-io = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-keyring = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
sp-timestamp = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev", default-features = false }
substrate-test-client = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev" }
