[package]
name = "pallet-etf-aura"
version = "4.0.0-dev"
authors = [
	"Ideal Labs <driemworks@idealabs.network>",
	"Parity Technologies <admin@parity.io>"
]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/ideal-lab5/etf/"
description = "FRAME ETF/AURA consensus pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/simd-update" }
frame-system = { default-features = false, git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/simd-update" }
pallet-timestamp = { default-features = false, git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/simd-update" }
sp-application-crypto = { default-features = false, git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/simd-update" }
sp-consensus-etf-aura = { default-features = false, path = "../../primitives/consensus/aura" }
sp-runtime = { default-features = false, git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/simd-update" }
sp-std = { default-features = false, git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/simd-update" }
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk.git", branch = "dpss"}

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/simd-update" }
sp-io = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/simd-update" }
pallet-balances = { default-features = false, git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/simd-update" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-consensus-etf-aura/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-balances/std"
]
try-runtime = ["frame-support/try-runtime"]
