[package]
name = "pallet-beefy"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "BEEFY FRAME pallet"
homepage = "https://substrate.io"

[lints]
workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
log = { workspace = true }
scale-info = { version = "2.10.0", default-features = false, features = ["derive", "serde"] }
serde = { optional = true, workspace = true, default-features = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1",  default-features =false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1",  default-features =false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1",  default-features =false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1",  default-features =false }
sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1",  default-features =false, features = ["serde"] }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1",  default-features =false, features = ["serde"] }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1",  default-features =false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1",  default-features =false, features = ["serde"] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1",  default-features =false }

[dev-dependencies]
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1",  default-features =false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-offences/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"serde/std",
	"sp-consensus-beefy/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-state-machine/std",
	"sp-std/std",
]
try-runtime = [
	"frame-election-provider-support/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]
