[package]
name = "pallet-etf"
version = "4.0.0-dev"
description = "FRAME pallet to store and manage IBE public params"
authors = ["Ideal Labs <https://github.com/ideal-lab5>"]
homepage = "https://idealabs.network"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
publish = false
repository = "https://github.com/ideal-lab5/etf/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# ahash = "0.8.7"
array-bytes = "6.1.0"
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
getrandom = { version = "0.2", features = ["js"] }
ark-serialize = { version = "0.4.0", features = [ "derive" ], default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1"  }
primitive-types = { version = "0.12.1", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" , optional = true }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
sp-consensus-etf-aura = { default-features = false, path = "../../primitives/consensus/aura" }

sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }

etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk.git", branch = "dpss-noscale", default-features = false }

pallet-etf-aura = { default-features = false, path = "../aura"}

[dev-dependencies]
frame-support-test = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
rand_chacha ="0.3.1"
ark-std = { version = "0.4.0", default-features = false }
hex = "0.4.3"

[features]
default = ["std"]
std = [ 
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"primitive-types/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"ark-serialize/std",
	"ark-bls12-381/std",
	"pallet-balances/std",
	"pallet-etf-aura/std",
	"sp-consensus-etf-aura/std",
	"etf-crypto-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-balances/try-runtime"
]
